committing finished version with all 6 profiles

--- a/students/Hope_Giometti.html
+++ b/students/Hope_Giometti.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/hope_background_pic.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -94,18 +94,18 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/hope_profile_pic.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Hope Giometti</h4>
         <div class="social-icons">
           <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
+          <a href="https://www.linkedin.com/in/hopegiometti/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://github.com/hopegiometti/"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>"If reality TV has taught us anything, it's that you can't keep people with no shame down." - Liz Lemon.</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                    I just graduated from Kenyon College with a degree in English Literature. Feel free to ask me anything about contemporary poetry and reality TV (the trashier, the better). I just moved to Brooklyn from the Colorado Rockies to begin my post-grad life and I'm super excited to start my coding journey! 
                 </p>
               </div>
             </div>
@@ -148,8 +148,7 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>Kenyon College</li>
                 </ul>
               </div>
             </div>
@@ -158,9 +157,9 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4>The Kenyon Review</h4>
                 <p>
-                  Blurb about company...
+                  Student Associate
                 </p>
               </div>
             </div>
@@ -226,8 +225,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="#">Personal Blog</a><br>
-                      - <a href="#">Tumblr</a><br>
+                      - <a href="https://github.com/hopegiometti/">Personal Blog</a><br>
                     </p>
                   </div>
                 </div>
@@ -259,9 +257,9 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
-                      <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
+                      <a>Sevilla</a><br>
+                      <a>Exeter</a><br>
+                      <a>Denver</a><br>
                       <a>New York</a><br>
                     </p>
                   </div>
@@ -273,9 +271,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="https://www.netflix.com/">Netflix</a><br>
+                    - Favorite Comic: <a href="http://www.johnmulaney.com/">John Mulaney</a><br>
+                    - Favorite Radio Program: <a href="https://www.thisamericanlife.org/">This American Life</a><br>
                   </p>
                 </div>
               </div>
