--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Test!!!</p>
                 </div>
                 <div class="clear"></div>
               </li>
